exports[`buttons NegButton creates a <button> element 1`] = `
<button
  className="neg "
  disabled={false}
  onClick={[Function]}
  title=""
  type="button">
  
</button>
`;

exports[`buttons NeutralButton creates a <button> element 1`] = `
<button
  className=""
  disabled={false}
  onClick={[Function]}
  title=""
  type="button">
  
</button>
`;

exports[`buttons NeutralButton sets the button type 1`] = `
<button
  className=""
  disabled={false}
  onClick={[Function]}
  title=""
  type="submit">
  
</button>
`;

exports[`buttons NeutralButton sets the disabled attribute 1`] = `
<button
  className=""
  disabled={true}
  onClick={[Function]}
  title=""
  type="button">
  
</button>
`;

exports[`buttons NeutralButton sets the onClick event using the click prop 1`] = `
<button
  className=""
  disabled={false}
  onClick={[Function]}
  title=""
  type="button">
  
</button>
`;

exports[`buttons NeutralButton sets the title attribute 1`] = `
<button
  className=""
  disabled={false}
  onClick={[Function]}
  title="foo"
  type="button">
  
</button>
`;

exports[`buttons PosButton creates a <button> element 1`] = `
<button
  className="pos "
  disabled={false}
  onClick={[Function]}
  title=""
  type="button">
  
</button>
`;
